<resources>
    <string name="app_name">PINDAI-OP</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="textLine">Stok Opname Scanner</string>
    <string name="input">Input Qty Stock</string>
    <string name="kode_barang">Kode Barang</string>
    <string name="nama_brg">Nama Barang</string>
    <string name="satuan">Satuan</string>
    <string name="lokasi_stok">Lokasi Stok</string>
    <string name="qty">Qty Stok</string>
    <string name="simpan">Simpan</string>

    <!-- Menu -->
    <string name="setting">Setting Default Lokasi</string>
    <string name="upload">Upload Hasil Opname</string>
    <string name="logout">Logout</string>
    <string name="pilihlokasi">Pilih Lokasi</string>
    <string name="pilihunit">Pilih Unit</string>
    <string name="unit">Unit</string>

    <string name="lokasi_diperbarui">Lokasi diperbaharui</string>
    <string name="unit_diperbarui">Unit diperbaharui</string>
    <string name="batal">Batal</string>
    <string name="success">Data disimpan</string>
    <string name="failed">Data Gagal disimpan</string>
    <string name="cannotNUll">Data Tidak Boleh Kosong</string>
    <string name="unit_disimpan">Unit Disimpan</string>
    <string name="lokasi_disimpan">Lokasi Disimpan</string>
    <string name="barang">Barang</string>
    <string name="history">History</string>
    <string name="title_activity_barang">BarangActivity</string>
</resources>
