<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".GetDataActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <SurfaceView
            android:id="@+id/cameraPreview"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginBottom="20dp"
            tools:ignore="MissingConstraints" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kode_barang"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/edtKode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text=""
            android:focusable="true"
            android:inputType="text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/nama_brg"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/edtNamaBrg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text=""
            android:inputType="text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/satuan"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/edtSatuan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text=""
            android:inputType="text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/unit"
            tools:ignore="MissingConstraints" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <EditText
            android:id="@+id/spUnit"
            android:inputType="text"
            android:enabled="false"
            android:layout_width="250dp"
            android:layout_height="wrap_content" />

            <View
                android:id="@+id/dropUnit"
                android:layout_width="20dp"
                android:layout_marginTop="10dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_toRightOf="@id/spUnit"
                android:background="@drawable/drop_down" />
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/lokasi_stok"
            tools:ignore="MissingConstraints" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/spLokasi"
                android:inputType="text"
                android:text="unit"
                android:enabled="false"
                android:layout_width="250dp"
                android:layout_height="wrap_content" />

            <View
                android:id="@+id/dropLokasi"
                android:layout_width="20dp"
                android:layout_marginTop="10dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_toRightOf="@id/spLokasi"
                android:background="@drawable/drop_down" />
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/qty"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/edtQty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:focusable="true"
            android:text=""
            android:inputType="number" />

        <Button
            android:id="@+id/btnSimpan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/colorPrimary"
            android:text="@string/simpan"
            android:textColor="@android:color/white"
            android:textSize="18sp" />
    </LinearLayout>
</ScrollView>