<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".GetDataActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:focusableInTouchMode="true"
        android:padding="20dp">

        <SurfaceView
            android:id="@+id/cameraPreview"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginBottom="20dp"
            tools:ignore="MissingConstraints" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kode_barang"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/edtKode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:focusable="true"
            android:inputType="text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/nama_brg"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/edtNamaBrg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:inputType="text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/satuan"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/edtSatuan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:inputType="text" />

        <Button
            android:id="@+id/btnSimpan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/colorPrimary"
            android:text="@string/simpan"
            android:textColor="@android:color/white"
            android:textSize="18sp" />
    </LinearLayout>
</ScrollView>